destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-wildcard
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: wildcard
apiVersion: networking.istio.io/v1alpha3
